This might not work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 	<body>
 		{% include header.html %}
 		{% include about.html %}
+		<div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 200 }'>
 		{% include page_content.html %}
 		{% include contact.html %}
 		{% include footer.html %}
