--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -1,4 +1,11 @@
 <section id="services">
+  
+<!-- Masonry Content -->
+  <div class="grid">
+    <div class="grid-item"><img src="img/services/Malware.jpg" alt=""></div> 
+  
+<!-- /.Masonry end -->
+  
 <!-- Page Content -->
 {% for post in site.posts reversed %}
   {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
