--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -3,7 +3,10 @@
 <!-- Masonry Content -->
   <div class="grid">
     <div class="grid-item"><img src="img/services/Malware.jpg" alt=""></div> 
-  
+    <div class="grid-item"><img src="img/services/Phishing.jpg" alt=""></div>
+    <div class="grid-item"><img src="img/services/Social-Media.jpg" alt=""></div>
+    <div class="grid-item"><img src="img/services/Authentication.jpg" alt=""></div>
+    
 <!-- /.Masonry end -->
   
 <!-- Page Content -->
