--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -1,7 +1,7 @@
 <section id="services">
   
 <!-- Masonry Content -->
-  <div class="grid">
+  <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 20 }'>
     <div class="grid-item"><img src="img/services/Malware.jpg" alt=""></div> 
     <div class="grid-item"><img src="img/services/Phishing.jpg" alt=""></div>
     <div class="grid-item"><img src="img/services/Social-Media.jpg" alt=""></div>
